# src/config/swagger.yaml
@@ -75,6 +75,8 @@ paths:
 
   /api/allMovies:
     get:
+      security:
+        - bearerAuth: []
       summary: Retrieve all movies
       tags:
         - Movies
@@ -121,3 +123,86 @@ paths:
                       type: boolean
                     movieID:
                       type: string
+
+  paths:
+  /api/postBookmark:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - Bookmark
+      summary: Create a new bookmark
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userEmail:
+                  type: string
+                  description: The ID of the user
+                  example: "123456"
+                movieID:
+                  type: string
+                  description: The ID of the movie to be bookmarked
+                  example: "789012"
+      responses:
+        "200":
+          description: Bookmark created successfully
+        "401":
+          description: Unauthorized - Title not found or bookmark already exists
+
+  paths:
+  /api/bookmarked:
+    get:
+      summary: Retrieve bookmarked movies
+      tags:
+        - Movies
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: A list of bookmarked movies
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    thumbnail:
+                      type: object
+                      properties:
+                        trending:
+                          type: object
+                          properties:
+                            small:
+                              type: string
+                            large:
+                              type: string
+                        regular:
+                          type: object
+                          properties:
+                            small:
+                              type: string
+                            medium:
+                              type: string
+                            large:
+                              type: string
+                    year:
+                      type: integer
+                    category:
+                      type: string
+                    rating:
+                      type: string
+                    isBookmarked:
+                      type: boolean
+                    isTrending:
+                      type: boolean
+                    movieID:
+                      type: string
+        '401':
+          description: Unauthorized - User not authenticated or invalid credentials
